<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_spaces">

    <fragment
        android:id="@+id/navigation_spaces"
        android:name="com.gustavopimentel.colorspaces.ui.spaces.SpacesFragment"
        android:label="@string/title_spaces"
        tools:layout="@layout/fragment_spaces" />

    <fragment
        android:id="@+id/navigation_lights"
        android:name="com.gustavopimentel.colorspaces.ui.lights.LightsFragment"
        android:label="@string/title_lights"
        tools:layout="@layout/fragment_lights" />

    <fragment
        android:id="@+id/navigation_guess"
        android:name="com.gustavopimentel.colorspaces.ui.guess.GuessFragment"
        android:label="@string/title_guess"
        tools:layout="@layout/fragment_guess" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.gustavopimentel.colorspaces.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>