<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/dark"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_hex_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:inputType="text"
        android:hint="Hex: #FFFFFF"
        android:maxLength="7"
        android:background="@android:color/transparent"
        />

    <TextView
        android:id="@+id/tv_hue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/default_hue" />

    <TextView
        android:id="@+id/tv_saturation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/default_saturation" />

    <TextView
        android:id="@+id/tv_brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/default_brightness" />

    <TextView
        android:id="@+id/tv_luminosity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/default_luminosity" />

    <com.example.colorspaces.ui.colorpicker.ColorPicker
        android:id="@+id/color_picker"
        android:layout_width="match_parent"
        android:layout_height="320dp" />

    <com.example.colorspaces.ui.colorpicker.HueSlider
        android:id="@+id/hue_slider"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btn_select_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_color"
        android:textColor="@android:color/white" />

</LinearLayout>
