<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:itemIconTint="@color/bottom_nav_icon_color"
        app:itemTextColor="@color/bottom_nav_icon_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <fragment
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/color_info_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

    <LinearLayout
        android:id="@+id/color_info_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/color_square"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="30dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/tv_hex_code"
            android:layout_width="126dp"
            android:layout_height="40dp"
            android:padding="8sp"
            android:text="@string/initial_color"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/nav_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_hue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_hue"
                android:textColor="@android:color/white"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tv_saturation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_saturation"
                android:textColor="@android:color/white"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tv_brightness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_brightness"
                android:textColor="@android:color/white"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tv_luminosity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/default_luminosity"
                android:textColor="@android:color/white"
                android:textSize="11sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
